# jukebox

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: pi-build.md  pi-deploy.md  pi-setup-log.md  pi-setup.md  pi-validation.md
docs/control cards/: README.md
scripts/: bootstrap.sh  check.sh  generate.py  generate_validation_cards.py  generate_validation_qrs.py  pi-bootstrap.sh  pi-deploy.sh  pi-smoke.sh  resolve-python.sh  run-local.sh
scripts/runtime/: jukebox-shutdown-helper.sh  jukebox-spotifyd-auth-helper.sh  jukebox-wifi-helper.sh
spec/: EPIC-1-requirements.md  EPIC-1-technical.md  EPIC-2-requirements.md  EPIC-2-technical.md  EPIC-3-requirements.md  EPIC-3-technical.md  EPIC-4-requirements.md  EPIC-4-technical.md  README.md  concept.md  examples.md  pisetup.md  roadmap.md
src/jukebox/: __init__.py  __main__.py  config.py  feedback_state.py  idle_monitor.py  logging.py  main.py  operator_server.py  operator_state.py  runtime.py  runtime_health.py  setup_mode.py
sudoers/: jukebox-maintenance
systemd/: jukebox.env.example  jukebox.service
tests/: test_action_router.py  test_config.py  test_controller.py  test_deduper.py  test_feedback.py  test_feedback_state.py  test_generate_validation_cards.py  test_idle_monitor.py  test_input_evdev.py  test_logging.py  test_main.py  test_operator_server.py  test_operator_state.py  test_parser.py  test_playback_spotify.py  test_playback_stub.py  test_resolve_python.py  test_runtime.py  test_runtime_health.py  test_setup_mode.py  test_system_helpers.py  test_wifi_helper.py
(+20 files in other folders)
